# docent

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  cursor-rules.md  diffing.ipynb  diffing_intro.ipynb  docent_llm_prefs.json  docker-bake.hcl  docker-compose-db.yml  docker-compose-redis.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.aws/: README.md  alb.tf  app_runner.tf  bastion.tf  bridgewater.tfvars  ecr.tf  ecs.tf  main.tf  metr.tfvars  outputs.tf  prod.tfvars  rds.tf  security_groups.tf  setup_notes.md  staging.tfvars  tailscale-user-data.tftpl  tailscale.tf  variables.tf  versions.tf  vpc.tf
.claude/: settings.json
.cursor/rules/: backend.mdc  frontend-styling.mdc  schemas.mdc
.github/workflows/: app-deploy.yml  bridgewater-deploy.yml  deploy-reusable.yml  deploy.yml  dev-deploy.yml  main-pr-pytest.yml  metr-deploy.yml  next-js.yml  pre-commit.yml  prod-deploy.yml  staging-deploy.yml  staging2-deploy.yml  test-deploy.yml
agent-tools/: README.md  SKILL.md  publish-quickstarts.sh  zip-cursor-quickstart.sh
agent-tools/cursor-quickstart/: docent.env  pyproject.toml
agent-tools/docent/: .mcp.json
alembic/: env.py
alembic/versions/: 0104b68ff3a5_custom_judge_model.py  10c961252f56_merge_heads.py  22c6507954e1_update_rubric_defn.py  272b2376885b_add_data_table_id_to_charts.py  2cbd1a8d1894_add_filters_table.py  32bc3e96d06f_add_labels_to_allowed_tables.py  3e944ba3908f_merge_heads.py  43165c6783d2_merge_fc98f65bfb12_and_aa3711c0cf33.py  4d619a150245_judge_result_reflections.py  5c4000016f18_add_filters_to_charts.py  5c581f3bd108_add_is_clone_to_collections.py  5c5e0f0e7d18_fix_created_at_default_for_transcripts_.py  62e704a72b45_add_anthropic_backend_support.py  6335bfb185cb_analysis_results.py  6387f7a8677b_cascade_delete_tables_from_collection_.py  665580d96b03_data_tables.py  6d9be98a2750_prod_to_main.py  71903b9a8ff7_add_versions_to_telemetry_status.py  74aec36e7f83_merge_heads.py  77807d29d9d5_add_index_to_job_table.py  7d7368f4cc8e_add_user_profile_table_for_onboaring.py  863c43b0ddd3_add_model_usage_table.py  86d817cb445f_migrate_to_a_single_rubric_text_field.py  8fdac2a6b2ac_judge_result_metadata.py  975db2dd2fb3_move_refinement_to_a_json_dump.py  9a1c94e22cbb_add_org_roles.py  9b87d6874efc_annotations.py  9d7efd738657_add_id_and_fingerprint_to_api_keys.py  9d87e00ae5fd_refinement.py  a4c8e2f13b71_add_metadata_json_to_collections.py  a7b8c9d0e1f2_drop_api_keys_timestamp_indices.py  aa3711c0cf33_telemetry_agent_run_status.py  (+17 more)
data/: README.md  cache.py  dump.py  generate.py  ingest.py  registry.py  utils.py
docent/: __init__.py  pyproject.toml
docent_core/: cli.py
docent_sdk/: pyproject.toml
docent_sdk/docent_sdk/: __init__.py
docent_sdk/docent_sdk/_log_util/: __init__.py
docent_sdk/docent_sdk/data_models/: __init__.py  agent_run.py  filters.py  metadata.py  regex.py  shared_types.py  transcript.py
docent_sdk/docent_sdk/data_models/chat/: __init__.py  message.py
docent_sdk/docent_sdk/sdk/: client.py
docs/: README.md  docs.json  docs_backup.json  index.md  quickstart.md  requirements-locked.txt  support.md
examples/: ingest_inspect.ipynb  ingest_simple.ipynb  ingest_tau_bench.ipynb
mint-docs/: docs.json  introduction.mdx  quickstart.mdx  support.mdx  tracing.mdx
scripts/: adjust_env_in_docker.sh  bump_version.sh  cleanup_backup_branches.sh  collection_download.py  collection_upload.py  create_pytest_db.sh  deploy.sh  deploy_to_branch.sh  ecr_push_frontend.sh  force_push_main_to_branch.sh  gwa.sh  gwd.sh  sync-plugin-to-marketplace.sh  sync_repos.sh  uv-lock-for-rtd.sh  watch_app_runner.sh  watch_ecs.sh
tests/: README.md  conftest.py  test_service.py
(+979 files in other folders)
