[project]
name = "docent"
version = "0.0.1"
description = "Docent"

requires-python = ">=3.11"
dependencies = [
    # Dev
    "pre-commit>=4.2.0",
    "pyright>=1.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    # Eval harness (for easy ingestion of inspect logs)
    "inspect-ai>=0.3.93",
    # Web server
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.23.1",
    "watchdog>=6.0.0",
    "sentry-sdk>=2.23.1",
    # DB
    "sqlalchemy>=2.0.40",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "greenlet>=3.2.1",
    # Cluster assignment
    "modal>=0.64.213",
    "torch",
    "transformers>=4.48.0",
    # Viz
    "plotly>=6.0.0",
    "matplotlib",
    "jupyter>=1.0.0",
    # LLM
    "openai>=1.68.0",
    "anthropic>=0.47.0",
    "google-genai>=1.16.1",
    "backoff>=2.2.1",
    "tiktoken>=0.7.0",
    # Docs
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.10",
    # Uncategorized
]

[project.scripts]
docent = "docent_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docent", "cli/docent_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
include = [
    "docent",
    "cli/docent_cli"
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
