[project]
name = "docent-sdk"
version = "0.0.1"
description = "Docent SDK"

requires-python = ">=3.11"
dependencies = [
    "logging>=0.4.9.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docent_sdk"]

[tool.hatch.metadata]
allow-direct-references = true
